[package]
name = "gh_release"
version = "0.2.5"
edition = "2021"
license = "MIT"
authors = ["Seimizu Joukan"]
description = "A fast, simple command-line tool for fetching and downloading GitHub release assets"
repository = "https://github.com/saimizi/gh_release"
keywords = ["github", "release", "download", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ghr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
jlogger-tracing = "0.1.4"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
futures = "0.3"
indicatif = "0.17"
urlencoding = "2.1"

[package.metadata.deb]
maintainer = "Seimizu Joukan <saimizi@protonmail.com>"
copyright = "2025, Seimizu Joukan <saimizi@protonmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A fast, simple command-line tool for fetching and downloading GitHub release assets.
Features include pattern matching for assets, concurrent downloads, interactive selection,
and repository search with private repository support."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ghr", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ghr/", "644"],
]

